--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--VerypaleBlue);
+    background: var(--VerypaleBlue) url('./images/pattern-background-desktop.svg') no-repeat top / contain;
 }
 
 /*Set picture tag */
